Bug 438080 - crash when deleting gradient segment
Summary: crash when deleting gradient segment
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Deif Lou
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-04 10:16 UTC by animtim
Modified: 2021-06-04 13:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description animtim 2021-06-04 10:16:49 UTC
100% reproducible crash when following these steps:

-create a new segmented gradient
-split it in two (with split or duplicate segment)
-select the segment on the right side
-press the delete segment button
Comment 1 Tiar 2021-06-04 11:54:10 UTC
Which git hash was that? Or, when did you download it?
Comment 2 animtim 2021-06-04 12:02:57 UTC
Still reproducible on latest git master commit as of now: 813ba5eb2eded3987e1292219dfa57dc267792fa
Comment 3 Deif Lou 2021-06-04 13:16:46 UTC
Git commit fa1b610bb9433cf394466879ea8d5cbb7ee02b4e by Deif Lou.
Committed on 04/06/2021 at 13:16.
Pushed by deiflou into branch 'master'.

Fix crash in new segmented gradient editor when deleting the last segment

M  +3    -0    libs/ui/widgets/gradient/KisSegmentGradientSlider.cpp

https://invent.kde.org/graphics/krita/commit/fa1b610bb9433cf394466879ea8d5cbb7ee02b4e