Fix crash in new segmented gradient editor when deleting the last segment

BUG:438080